--- a/src/main/resources/assets/textweaks/lang/en_us.json
+++ b/src/main/resources/assets/textweaks/lang/en_us.json
@@ -2,7 +2,7 @@
 	"text.autoconfig.textweaks.title": "TexTweaks - Reload textures to apply effects",
 	"text.autoconfig.textweaks.option.enableTextureScaling": "Enable Texture Scaling",
 	"text.autoconfig.textweaks.option.enableTextureScaling.@Tooltip": "Needed for higher mipmap levels if not all textures have the same resolution",
-	"text.autoconfig.textweaks.option.textureResolution": "Target Texture Size",
+	"text.autoconfig.textweaks.option.textureResolution": "Texture Resolution",
 	"text.autoconfig.textweaks.option.textureResolution.@Tooltip[0]": "Upscale textures to this resolution",
 	"text.autoconfig.textweaks.option.textureResolution.@Tooltip[1]": "In powers of 2 (4 = 16x, 6 = 64x, 8 = 256x etc.)",
 	"text.autoconfig.textweaks.option.textureResolution.@Tooltip[3]": "Textures higher than this resolution will be unaffected",
@@ -15,10 +15,10 @@
 	"text.autoconfig.textweaks.option.maxMipmap.@Tooltip[2]": "Actual value will be reduced based on texture size",
 	"text.autoconfig.textweaks.option.enableLodBiasOverride": "Enable LOD Bias",
 	"text.autoconfig.textweaks.option.lodBias": "LOD Bias",
-	"text.autoconfig.textweaks.option.lodBias.@Tooltip[0]": "Set texture level of detail (LOD) bias for mipmaps",
-	"text.autoconfig.textweaks.option.lodBias.@Tooltip[1]": "<0: Texture LOD is reduced at a farther distance",
-	"text.autoconfig.textweaks.option.lodBias.@Tooltip[2]": ">0: Texture LOD is reduced at a closer distance",
-	"text.autoconfig.textweaks.option.fractal": "Debug Fractal",
-	"text.autoconfig.textweaks.option.fractal.@Tooltip[0]": "DEBUG OPTION",
-	"text.autoconfig.textweaks.option.fractal.@Tooltip[1]": "Removes a pixel during each scaling step which creates a fractal like effect on scaled textures"
+	"text.autoconfig.textweaks.option.lodBias.@Tooltip[0]": "Set the detail of distant textures",
+	"text.autoconfig.textweaks.option.lodBias.@Tooltip[1]": "<0: More detail, more aliasing",
+	"text.autoconfig.textweaks.option.lodBias.@Tooltip[2]": ">0: Less detail, less aliasing",
+	"text.autoconfig.textweaks.option.debugFractal": "Debug Fractal",
+	"text.autoconfig.textweaks.option.debugFractal.@Tooltip[0]": "DEBUG OPTION",
+	"text.autoconfig.textweaks.option.debugFractal.@Tooltip[1]": "Removes a pixel during each scaling step which creates a fractal like effect on scaled textures"
 }
