Group config into categories, add parallel pre-scaling

--- a/src/main/resources/assets/textweaks/lang/en_us.json
+++ b/src/main/resources/assets/textweaks/lang/en_us.json
@@ -1,21 +1,35 @@
 {
 	"text.autoconfig.textweaks.title": "TexTweaks - Reload textures to apply effects",
-	"text.autoconfig.textweaks.option.enableTextureScaling": "Enable Texture Scaling",
-	"text.autoconfig.textweaks.option.enableTextureScaling.@Tooltip": "Needed for higher mipmap levels if not all textures have the same resolution",
-	"text.autoconfig.textweaks.option.textureResolution": "Texture Resolution",
-	"text.autoconfig.textweaks.option.textureResolution.@Tooltip[0]": "Upscale textures to this resolution",
+	"text.autoconfig.textweaks.option.textureScaling": "Texture Scaling",
+	"text.autoconfig.textweaks.option.textureScaling.@Tooltip": "Upscale lower resolution textures, required for Better Mipmaps",
+	"text.autoconfig.textweaks.option.textureScaling.enable": "Enable",
+	"text.autoconfig.textweaks.option.textureScaling.textureResolution": "Texture Resolution",
+	"text.autoconfig.textweaks.option.textureScaling.textureResolution.@Tooltip[0]": "Upscale textures to this resolution",
 	"text.autoconfig.textweaks.option.textureResolution.@Tooltip[1]": "In powers of 2 (4 = 16x, 6 = 64x, 8 = 256x etc.)",
-	"text.autoconfig.textweaks.option.textureResolution.@Tooltip[3]": "Textures higher than this resolution will be unaffected",
-	"text.autoconfig.textweaks.option.maxScale": "Max Scale",
-	"text.autoconfig.textweaks.option.maxScale.@Tooltip": "Cap maximum scaling power in case something breaks",
-	"text.autoconfig.textweaks.option.enableMipmapOverride": "Enable Better Mipmaps",
-	"text.autoconfig.textweaks.option.maxMipmap": "Max Mipmap Level",
-	"text.autoconfig.textweaks.option.maxMipmap.@Tooltip[0]": "Override Minecraft mipmap level (can go above 4)",
-	"text.autoconfig.textweaks.option.maxMipmap.@Tooltip[1]": "Higher mipmap levels will need more VRAM",
-	"text.autoconfig.textweaks.option.maxMipmap.@Tooltip[2]": "Actual value will be reduced based on texture size",
-	"text.autoconfig.textweaks.option.enableLodBiasOverride": "Enable LOD Bias",
+	"text.autoconfig.textweaks.option.textureScaling.maxScale": "Max Scale",
+	"text.autoconfig.textweaks.option.textureScaling.maxScale.@Tooltip": "Cap maximum scaling power in case something breaks",
+	
+	"text.autoconfig.textweaks.option.betterMipmaps": "Better Mipmaps",
+	"text.autoconfig.textweaks.option.betterMipmaps.@Tooltip": "Set mipmap level to above 4",
+	"text.autoconfig.textweaks.option.betterMipmaps.enable": "Enable",
+	"text.autoconfig.textweaks.option.betterMipmaps.level": "Mipmap Level",
+	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[0]": "Override Minecraft mipmap level",
+	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[1]": "Higher mipmap levels will use more VRAM",
+	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[2]": "Actual level will be reduced based on texture size",
+	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap": "Universal Mipmap",
+	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap.@Tooltip": "Currently does nothing visible",
+	
 	"text.autoconfig.textweaks.option.lodBias": "LOD Bias",
-	"text.autoconfig.textweaks.option.lodBias.@Tooltip[0]": "Set the detail of distant textures",
-	"text.autoconfig.textweaks.option.lodBias.@Tooltip[1]": "<0: More detail, more aliasing",
-	"text.autoconfig.textweaks.option.lodBias.@Tooltip[2]": ">0: Less detail, less aliasing"
+	"text.autoconfig.textweaks.option.lodBias.@Tooltip": "Fine-tune the detail of distant textures",
+	"text.autoconfig.textweaks.option.lodBias.enable": "Enable",
+	"text.autoconfig.textweaks.option.lodBias.value": "Value",
+	"text.autoconfig.textweaks.option.lodBias.value.@Tooltip[0]": "<0: More detail, more aliasing",
+	"text.autoconfig.textweaks.option.lodBias.value.@Tooltip[1]": ">0: Less detail, less aliasing",
+	
+	"text.autoconfig.textweaks.option.other": "Other",
+	"text.autoconfig.textweaks.option.other.@Tooltip": "Other options",
+	"text.autoconfig.textweaks.option.other.excludedAtlas": "Excluded Atlas",
+	"text.autoconfig.textweaks.option.other.excludedAtlas.@Tooltip": "Atlases to be excluded from scaling",
+	"text.autoconfig.textweaks.option.other.parallelPreScaling": "Parallel Pre-scaling",
+	"text.autoconfig.textweaks.option.other.parallelPreScaling.@Tooltip": "Can marginally improve scaling performance"
 }
