Small config edit, rewrite parallel pre-scaling

--- a/src/main/resources/assets/textweaks/lang/en_us.json
+++ b/src/main/resources/assets/textweaks/lang/en_us.json
@@ -3,21 +3,20 @@
 	"text.autoconfig.textweaks.option.textureScaling": "Texture Scaling",
 	"text.autoconfig.textweaks.option.textureScaling.@Tooltip": "Upscale lower resolution textures, required for Better Mipmaps",
 	"text.autoconfig.textweaks.option.textureScaling.enable": "Enable",
-	"text.autoconfig.textweaks.option.textureScaling.textureResolution": "Texture Resolution",
-	"text.autoconfig.textweaks.option.textureScaling.textureResolution.@Tooltip[0]": "Upscale textures to this resolution",
-	"text.autoconfig.textweaks.option.textureResolution.@Tooltip[1]": "In powers of 2 (4 = 16x, 6 = 64x, 8 = 256x etc.)",
+	"text.autoconfig.textweaks.option.textureScaling.resolution": "Texture Resolution",
+	"text.autoconfig.textweaks.option.textureScaling.resolution.@Tooltip": "In powers of 2 (4 = 16x, 6 = 64x, 8 = 256x etc.)",
 	"text.autoconfig.textweaks.option.textureScaling.maxScale": "Max Scale",
 	"text.autoconfig.textweaks.option.textureScaling.maxScale.@Tooltip": "Cap maximum scaling power in case something breaks",
 	
 	"text.autoconfig.textweaks.option.betterMipmaps": "Better Mipmaps",
-	"text.autoconfig.textweaks.option.betterMipmaps.@Tooltip": "Set mipmap level to above 4",
+	"text.autoconfig.textweaks.option.betterMipmaps.@Tooltip": "Set mipmap level above 4",
 	"text.autoconfig.textweaks.option.betterMipmaps.enable": "Enable",
 	"text.autoconfig.textweaks.option.betterMipmaps.level": "Mipmap Level",
 	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[0]": "Override Minecraft mipmap level",
 	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[1]": "Higher mipmap levels will use more VRAM",
 	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[2]": "Actual level will be reduced based on texture size",
 	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap": "Universal Mipmap",
-	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap.@Tooltip": "Currently does nothing visible",
+	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap.@Tooltip": "Currently doesn't do anything yet",
 	
 	"text.autoconfig.textweaks.option.lodBias": "LOD Bias",
 	"text.autoconfig.textweaks.option.lodBias.@Tooltip": "Fine-tune the detail of distant textures",
