--- a/src/main/resources/assets/textweaks/lang/en_us.json
+++ b/src/main/resources/assets/textweaks/lang/en_us.json
@@ -36,5 +36,8 @@
 	"text.autoconfig.textweaks.option.other.excludedAtlas": "Excluded Atlas",
 	"text.autoconfig.textweaks.option.other.excludedAtlas.@Tooltip": "Atlases to be excluded from scaling",
 	"text.autoconfig.textweaks.option.other.parallelPreScaling": "Parallel Pre-scaling",
-	"text.autoconfig.textweaks.option.other.parallelPreScaling.@Tooltip": "Can marginally improve scaling performance"
+	"text.autoconfig.textweaks.option.other.parallelPreScaling.@Tooltip": "Can marginally improve scaling performance",
+
+	"category.textweaks": "TexTweaks",
+	"key.textweaks.info": "Show Texture Info"
 }
