Big rewrite, move some content to niapi library

--- a/src/main/resources/assets/textweaks/lang/en_us.json
+++ b/src/main/resources/assets/textweaks/lang/en_us.json
@@ -37,6 +37,8 @@
 	"text.autoconfig.textweaks.option.other.@Tooltip": "Other options",
 	"text.autoconfig.textweaks.option.other.parallelPreScaling": "Parallel Pre-scaling",
 	"text.autoconfig.textweaks.option.other.parallelPreScaling.@Tooltip": "Can marginally improve scaling performance",
+	"text.autoconfig.textweaks.option.other.replaceAllImages": "Forbidden Option",
+	"text.autoconfig.textweaks.option.other.replaceAllImages.@Tooltip": "???",
 
 	"category.textweaks": "TexTweaks",
 	"key.textweaks.info": "Show Texture Info"
