Change better mipmaps options

--- a/src/main/resources/assets/textweaks/lang/en_us.json
+++ b/src/main/resources/assets/textweaks/lang/en_us.json
@@ -2,27 +2,27 @@
 	"text.autoconfig.textweaks.title": "TexTweaks - \u00a7lReload textures (F3+T) to apply effects\u00a7r",
 
 	"text.autoconfig.textweaks.option.textureScaling": "Texture Scaling",
-	"text.autoconfig.textweaks.option.textureScaling.@Tooltip[0]": "Upscale lower resolution textures",
-	"text.autoconfig.textweaks.option.textureScaling.@Tooltip[1]": "Required for higher mipmap levels since it requires all textures to have the same size",
+	"text.autoconfig.textweaks.option.textureScaling.@Tooltip": "Upscale/downscale textures to set size",
 	"text.autoconfig.textweaks.option.textureScaling.enableUpscale": "Enable Upscaling",
 	"text.autoconfig.textweaks.option.textureScaling.enableDownscale": "Enable Downscaling",
 	"text.autoconfig.textweaks.option.textureScaling.resolution": "Texture Resolution",
 	"text.autoconfig.textweaks.option.textureScaling.resolution.@Tooltip[0]": "In the power of 2 (4 = 16x, 5 = 32x, 6 = 64x etc.)",
 	"text.autoconfig.textweaks.option.textureScaling.resolution.@Tooltip[1]": "It's recommended to set this to the highest resolution of all texture packs",
+	"text.autoconfig.textweaks.option.textureScaling.resolution.@Tooltip[2]": "Higher values can have significant impact on performance and memory usage",
 	"text.autoconfig.textweaks.option.textureScaling.downscale": "Enable Downscale Texture",
 	"text.autoconfig.textweaks.option.textureScaling.downscale.@Tooltip": "Downscale higher resolution textures to this resolution",
 	"text.autoconfig.textweaks.option.textureScaling.upscaleAlgorithm": "Upscale Algorithm",
 	"text.autoconfig.textweaks.option.textureScaling.upscaleAlgorithm.@Tooltip[0]": "Select upscaling algorithm",
 	"text.autoconfig.textweaks.option.textureScaling.upscaleAlgorithm.@Tooltip[1]": "NEAREST- Use nearest pixel",
-	"text.autoconfig.textweaks.option.textureScaling.upscaleAlgorithm.@Tooltip[2]": "LINEAR - Average multiple pixels",
+	"text.autoconfig.textweaks.option.textureScaling.upscaleAlgorithm.@Tooltip[2]": "LINEAR - Average multiple pixels (not recommended for upscaling)",
 	"text.autoconfig.textweaks.option.textureScaling.downscaleAlgorithm": "Downscale Algorithm",
 	"text.autoconfig.textweaks.option.textureScaling.downscaleAlgorithm.@Tooltip[0]": "Select downscaling algorithm",
 	"text.autoconfig.textweaks.option.textureScaling.downscaleAlgorithm.@Tooltip[1]": "NEAREST- Use nearest pixel",
 	"text.autoconfig.textweaks.option.textureScaling.downscaleAlgorithm.@Tooltip[2]": "LINEAR - Average multiple pixels",
 	"text.autoconfig.textweaks.option.textureScaling.upscaleTargetAtlases": "Upscale Target Atlases",
-	"text.autoconfig.textweaks.option.textureScaling.upscaleTargetAtlases.@Tooltip": "Texture Atlases included for upscaling",
+	"text.autoconfig.textweaks.option.textureScaling.upscaleTargetAtlases.@Tooltip": "Texture atlases included for upscaling",
 	"text.autoconfig.textweaks.option.textureScaling.downscaleTargetAtlases": "Downscale Target Atlases",
-	"text.autoconfig.textweaks.option.textureScaling.downscaleTargetAtlases.@Tooltip": "Texture Atlases included for downscaling",
+	"text.autoconfig.textweaks.option.textureScaling.downscaleTargetAtlases.@Tooltip": "Texture atlases included for downscaling",
 
 	"text.autoconfig.textweaks.option.betterMipmaps": "Better Mipmaps",
 	"text.autoconfig.textweaks.option.betterMipmaps.@Tooltip": "Set mipmap level above 4 to complete mipmaps for higher resolution texture packs",
@@ -32,7 +32,9 @@
 	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[1]": "Higher mipmap levels will use more VRAM",
 	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[2]": "Actual level will be reduced based on texture size, so setting it to max is safe",
 	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap": "Enable Mipmap On All Atlases",
-	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap.@Tooltip": "Doesn't do much, don't turn this on",
+	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap.@Tooltip": "Mipmap all atlases, not just block.png",
+	"text.autoconfig.textweaks.option.betterMipmaps.overrideMipmapGeneration": "Override Mipmap Generation",
+	"text.autoconfig.textweaks.option.betterMipmaps.overrideMipmapGeneration.@Tooltip": "Use a different downscaling method for generating mipmaps",
 	"text.autoconfig.textweaks.option.betterMipmaps.mipmapBlockCutouts": "Mipmap Block Cutouts",
 	"text.autoconfig.textweaks.option.betterMipmaps.mipmapBlockCutouts.@Tooltip[0]": "Affects grass and foliage",
 	"text.autoconfig.textweaks.option.betterMipmaps.mipmapBlockCutouts.@Tooltip[1]": "Can cause artifacts depending on setup",
@@ -42,7 +44,7 @@
 	
 	"text.autoconfig.textweaks.option.lodBias": "LOD Bias",
 	"text.autoconfig.textweaks.option.lodBias.@Tooltip[0]": "Fine-tune mipmap transitions",
-	"text.autoconfig.textweaks.option.lodBias.@Tooltip[1]": "Performance benefit is minimal",
+	"text.autoconfig.textweaks.option.lodBias.@Tooltip[1]": "Effect on performance is minimal",
 	"text.autoconfig.textweaks.option.lodBias.enable": "Enable",
 	"text.autoconfig.textweaks.option.lodBias.value": "Value",
 	"text.autoconfig.textweaks.option.lodBias.value.@Tooltip[0]": "Set LOD bias value",
