Add missing config lang

--- a/src/main/resources/assets/textweaks/lang/en_us.json
+++ b/src/main/resources/assets/textweaks/lang/en_us.json
@@ -31,8 +31,9 @@
 	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[0]": "Override Minecraft mipmap level",
 	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[1]": "Higher mipmap levels will use more VRAM",
 	"text.autoconfig.textweaks.option.betterMipmaps.level.@Tooltip[2]": "Actual level will be reduced based on texture size, so setting it to max is safe",
-	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap": "Enable Mipmap On All Atlases",
-	"text.autoconfig.textweaks.option.betterMipmaps.universalMipmap.@Tooltip": "Mipmap all atlases, not just block.png",
+	"text.autoconfig.textweaks.option.betterMipmaps.targetAtlases": "Target Atlases",
+	"text.autoconfig.textweaks.option.betterMipmaps.targetAtlases.@Tooltip": "If \"Only Mipmap Target Atlases\" is enabled, only these atlases will have higher mipmap levels applied",
+	"text.autoconfig.textweaks.option.betterMipmaps.onlyMipmapTarget": "Only Mipmap Target Atlases",
 	"text.autoconfig.textweaks.option.betterMipmaps.overrideMipmapGeneration": "Override Mipmap Generation",
 	"text.autoconfig.textweaks.option.betterMipmaps.overrideMipmapGeneration.@Tooltip": "Use a different downscaling method for generating mipmaps",
 	"text.autoconfig.textweaks.option.betterMipmaps.mipmapBlockCutouts": "Mipmap Block Cutouts",
